<?xml version="1.0"?>
<package format="3">
  <name>webots_ros2_tesla</name>
  <version>2023.1.3</version>
  <description>The Tesla ROS2 interface for Webots with lidar and SLAM support.</description>

  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/webots_ros2</url>
  <url type="bugtracker">https://github.com/cyberbotics/webots_ros2/issues</url>
  <url type="repository">https://github.com/cyberbotics/webots_ros2</url>

  <!-- Build tool dependency for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS dependencies for functionality -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>slam_toolbox</depend>
  <depend>nav_msgs</depend> <!-- For OccupancyGrid in SLAM mapping -->

  <!-- Optional dependencies (remove if unused) -->
  <exec_depend>cv_bridge</exec_depend> <!-- If using OpenCV for camera processing -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
